Wed Apr  2 20:41:38 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: lower timeout value for communication with the
   UPS to 3 seconds and increase number of retries allowed to 10
   before complaining about stale data (also fix minor issue with
   cleanup of the driver)
 - man/netxml-ups.8: update manual page to reflect how this driver
   deals with 'pollinterval'

Tue Apr  1 20:15:44 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upscmd: be a good little client that cleans up after itself

Tue Apr  1 20:01:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: make the command list sorted (so that commands
   will be listed in alphabetic order by upscmd)

Mon Mar 31 19:53:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsc: be a good little client that cleans up after itself

Mon Mar 31 11:31:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.[ch]:
   - add read buffer (so that we can read in larger chunks, instead
     of character by character)
   - the context buffer is now statically allocated (since we always
     need it)
   - code cleanup

Fri Mar 28 20:20:08 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

- drivers/dstate.[ch]: use doubly linked list for connections to the
  driver (to speedup adding/removing connections) and code cleanup

Fri Mar 28 20:01:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/sstate.c,upsd.c: don't terminate connection on EAGAIN,
   EINTR or if no data was received (these are not really errors)

Thu Mar 27 21:36:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dstate.c: fix memory leak (minor)

Thu Mar 27 20:24:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: default to 5 seconds if pollinterval is not
   specified (to prevent overloading older NMCs by default)

Tue Mar 25 20:09:12 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: partially revert r1394 (breaks the LIST